# coral-editor

./: Cargo.toml  fullscreen-override_redirect.patch
src/: main.rs
